[package]
name = "endesga-time"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = { version = ">=0.33", features = ["bundled", "static-link"] }
ultraviolet = "0.8.1"


[build-dependencies]
gl_generator = "0.14.0"
